# django-vue-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: settings.py  urls.py  views.py
src/: App.vue
