[tool.poetry]
name = "integrate-django-vue"
version = "0.1.0"
description = "simple starter for vue + django w/ api calls"
authors = ["Tyler Ewald tyler.csci@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
